<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.github.jamesnetherton</groupId>
  <artifactId>lolcat4j</artifactId>
  <version>0.5.0-SNAPSHOT</version>

  <name>lolcat4j</name>
  <description>Rainbows and unicorns!</description>
  <url>https://github.com/jamesnetherton/lolcat4j</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <!-- Project dependency versions -->
    <version.junit>6.0.3</version.junit>

    <!-- Plugin versions -->
    <version.central.publishing.maven.plugin>0.7.0</version.central.publishing.maven.plugin>
    <version.maven.compiler.plugin>3.14.0</version.maven.compiler.plugin>
    <version.maven.gpg.plugin>3.2.7</version.maven.gpg.plugin>
    <version.maven.jar.plugin>3.4.2</version.maven.jar.plugin>
    <version.maven.javadoc.plugin>3.11.2</version.maven.javadoc.plugin>
    <version.maven.release.plugin>3.1.1</version.maven.release.plugin>
    <version.maven.source.plugin>3.3.1</version.maven.source.plugin>
    <version.maven.surefire.plugin>3.5.1</version.maven.surefire.plugin>
  </properties>

  <scm>
    <connection>scm:git:git://github.com/jamesnetherton/lolcat4j.git</connection>
    <developerConnection>scm:git:git@github.com:jamesnetherton/lolcat4j.git</developerConnection>
    <url>${project.url}</url>
    <tag>HEAD</tag>
  </scm>

  <developers>
    <developer>
      <name>James Netherton</name>
      <url>https://github.com/jamesnetherton</url>
      <timezone>0</timezone>
    </developer>
  </developers>

  <issueManagement>
    <url>https://github.com/jamesnetherton/lolcat4j/issues</url>
    <system>GitHub</system>
  </issueManagement>

  <licenses>
    <license>
      <name>MIT</name>
      <url>https://opensource.org/licenses/MIT</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <distributionManagement>
    <snapshotRepository>
      <id>central</id>
      <name>Central Snapshots</name>
      <url>https://central.sonatype.com/repository/maven-snapshots/</url>
    </snapshotRepository>
  </distributionManagement>

  <dependencies>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>${version.junit}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
      </resource>
    </resources>
    <testResources>
      <testResource>
        <directory>src/test/resources</directory>
        <filtering>true</filtering>
      </testResource>
    </testResources>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${version.maven.compiler.plugin}</version>
        <configuration>
          <release>17</release>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-jar-plugin</artifactId>
        <version>${version.maven.jar.plugin}</version>
        <configuration>
          <archive>
            <manifest>
              <mainClass>com.github.jamesnetherton.lolcat4j.internal.Main</mainClass>
            </manifest>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-release-plugin</artifactId>
        <version>${version.maven.release.plugin}</version>
        <configuration>
          <arguments>-Dgpg.passphrase=${gpg.passphrase}</arguments>
          <tagNameFormat>@{project.version}</tagNameFormat>
          <releaseProfiles>release</releaseProfiles>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${version.maven.surefire.plugin}</version>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>release</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.sonatype.central</groupId>
            <artifactId>central-publishing-maven-plugin</artifactId>
            <version>${version.central.publishing.maven.plugin}</version>
            <extensions>true</extensions>
            <configuration>
              <publishingServerId>central</publishingServerId>
              <autoPublish>true</autoPublish>
            </configuration>
          </plugin>
          <plugin>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>${version.maven.gpg.plugin}</version>
            <configuration>
              <passphrase>${gpg.passphrase}</passphrase>
            </configuration>
            <executions>
              <execution>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <artifactId>maven-source-plugin</artifactId>
            <version>${version.maven.source.plugin}</version>
            <executions>
              <execution>
                <id>attach-sources</id>
                <goals>
                  <goal>jar-no-fork</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>${version.maven.javadoc.plugin}</version>
            <configuration>
              <encoding>${project.build.sourceEncoding}</encoding>
            </configuration>
            <executions>
              <execution>
                <id>attach-javadocs</id>
                <goals>
                  <goal>jar</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
